--- a/examples/two-column/css/base.css
+++ b/examples/two-column/css/base.css
@@ -27,8 +27,6 @@
 }
 
 .two-column {
-  width: 100%;
-  height: 100%;
   padding: 56px 64px 48px;
   display: flex;
   flex-direction: column;
